Fix #35957: blender internal viewport render did not do correct color management for image textures.